Fix feedback form styles in high contrast theme
Fixes #6441

--- a/src/vs/workbench/parts/feedback/browser/media/feedback.css
+++ b/src/vs/workbench/parts/feedback/browser/media/feedback.css
@@ -298,8 +298,10 @@
 }
 
 /* High Contrast Theming */
-.monaco-shell .hc-black .feedback-form {
-	background-color: #0C141F;
+.monaco-shell.hc-black .feedback-form {
+	background-color: #000;
+	outline: 2px solid #6fc3df;
+	outline-offset: -2px;
 }
 
 .monaco-shell.hc-black .feedback-form h2 {
@@ -315,7 +317,7 @@
 
 .monaco-shell.hc-black .feedback-form .content .contactus {
 	padding: 10px;
-	border: solid 1px #B4BABF;
+	border: solid 1px #6FC3DF;
 	background-color: #0C141F;
 	float: right;
 }
